# support-knowledge-copilot

./: .env.example  .gitignore  Demo.md  Makefile  README.md  WALKTHROUGH.md  app.py  ask.py  docker-compose.yml  eval.py  ingest.py  pyproject.toml  requirements.txt  streamlit_app.py
.cursor/rules/: demo-md.mdc
data/bm25/: index.pkl
data/eval/: golden_qa.jsonl
data/qdrant/: meta.json
docs/api/: authentication.md  tickets-api.md  webhooks-api.md
docs/faq/: billing-faq.md  notifications.md  password-reset.md
docs/onboarding/: admin-roles.md  new-hire-access.md  sso-setup.md
docs/policies/: account-deactivation.md  data-retention.md  mfa-policy.md  support-sla.md
docs/release-notes/: 2025-12-release.md  2026-04-release.md
docs/troubleshooting/: auth-errors.md  sync-failures.md  webhook-errors.md
reports/: eval_dense_retrieval.md  eval_hybrid.md  eval_hybrid_retrieval.md  eval_sparse_retrieval.md
src/knowledge_copilot/: __init__.py  config.py  llm.py  models.py  service.py
src/knowledge_copilot/api/: main.py
src/knowledge_copilot/eval/: metrics.py  runner.py
src/knowledge_copilot/generate/: __init__.py  answer.py  prompt.py
src/knowledge_copilot/index/: __init__.py  bm25_store.py  embeddings.py  qdrant_store.py
src/knowledge_copilot/ingest/: __init__.py  chunking.py  loaders.py  pipeline.py
src/knowledge_copilot/retrieve/: __init__.py  fusion.py  pipeline.py  rerank.py
src/knowledge_copilot/verify/: __init__.py  citations.py  confidence.py
tests/: test_chunking.py  test_citations.py  test_fusion.py
(+1 files in other folders)
