[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-copilot"
version = "0.1.0"
description = "Support Knowledge Copilot with hybrid retrieval and verified citations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "google-genai>=1.0.0",
  "qdrant-client>=1.12.0",
  "rank-bm25>=0.2.2",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "python-dotenv>=1.0.1",
  "streamlit>=1.40.0",
  "httpx>=0.27.0",
  "pypdf>=5.0.0",
  "beautifulsoup4>=4.12.0",
  "markdownify>=0.13.1",
  "numpy>=1.26.0",
  "typer>=0.12.0",
  "rich>=13.9.0",
  "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.vercel]
entrypoint = "src.knowledge_copilot.api.main:app"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
